fixed spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -347,6 +347,14 @@ $circle: 50%;
   border-top-right-radius: 10px;
 }
 
+div.card-content {
+  padding: 8px;
+}
+
+div.card-header-title {
+  padding: 8px;
+}
+
 .liquid {
   position: absolute;
   bottom: 5%;
